# WebPaintEgui

./: .gitignore  Cargo.toml  Cargo.toml.frontend  Dockerfile.backend  Dockerfile.frontend  README.md  Trunk.toml  docker-compose.yml  index.html
assets/: sw.js
backend/: Cargo.toml
backend/src/: main.rs
frontend/: Cargo.toml  build.rs
frontend/src/: app.rs  lib.rs  main.rs  requests.rs  web.rs
public/: 404.html  index.html
shared/: Cargo.toml
shared/src/: config.rs  lib.rs
