cargo-features = ["per-package-target"]

[package]
name = "frontend"
version = "0.1.0"
edition = "2021"
default-target = "wasm32-unknown-unknown"

[lib]
name = "frontend"
crate-type = ["cdylib"]



[dependencies]
shared ={ path = "../shared" }
eframe = {version="0.23.0", features = ["wgpu", "glow", "serde", "web_screen_reader"]}
egui = {version="0.23.0", features = ["callstack", "extra_debug_asserts", "log"]}
chrono = {version="0.4.19", default-features = false, features=["js-sys", "wasmbind", "clock"]}
log = "0.4.20"
ehttp = "0.3.1"
wasm-bindgen = "0.2.87"
wasm-bindgen-futures = "0.4.37"
web-sys = "0.3.64"
bytemuck = "1.14.0"
egui_extras = "0.23.0"
image = "0.24.7"
reqwest = "0.11.22"
futures = "0.3.28"
serde_json = "1.0.107"
serde = {version="1.0.188", features=["derive"]}
getrandom = {version="0.2.10", features = ["js"]}
rand = {version="0.8.5"}
anyhow = "1.0.75"
thiserror = "1.0.49"
async-recursion = "1.0.5"
itertools = "0.11.0"
lazy_static = "1.4.0"