[package]
name = "shared"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.188"
serde_json = "1.0.107"
itertools = "0.11.0"
egui = "0.23.0"
indoc = "2.0.4"
config = "0.13.3"
toml = "0.8.2"
lazy_static = "1.4.0"
anyhow = "1.0.75"
thiserror = "1.0.49"
rand = "0.8.5"